[project]
name = "maf-enterprise-series"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "agent-framework>=1.2.0",
    "agent-framework-openai>=1.2.0",
    "fastmcp>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "python-pptx>=1.0.2",
    "reportlab>=4.4.10",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["01-agent-with-tools"]
